import React from 'react'

import { fireEvent, render, screen } from '@testing-library/react'

import ColorPicker from '../ColorPicker'

const minProps = {
    onChange: jest.fn(),
}

describe('<ColorPicker />', () => {
    beforeEach(() => {
        minProps.onChange.mockReset()
        jest.useFakeTimers()
    })

    afterEach(() => {
        jest.clearAllTimers()
    })

    it('should render with minimal props', () => {
        const { container } = render(<ColorPicker {...minProps} />)
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render with background color matching value', () => {
        const { container } = render(
            <ColorPicker value="#fff" defaultValue="#000" {...minProps} />,
        )
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render with background color matching defaultValue', () => {
        const { container } = render(
            <ColorPicker defaultValue="#000" {...minProps} />,
        )
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should display popup on button click with default colors, inside container', async () => {
        const { container } = render(
            <div id="container">
                <ColorPicker
                    {...minProps}
                    popupContainer="container"
                    value="#fff"
                />
            </div>,
        )
        fireEvent.click(screen.getByRole('button'))
        await screen.findByRole('textbox')
        jest.advanceTimersByTime(300)
        expect(container.firstChild).toMatchSnapshot()
    })
    it('should display popup on button click with provided colors', () => {
        render(<ColorPicker {...minProps} colors={['#fff']} />)
        fireEvent.click(screen.getByRole('button'))
        expect(screen.getAllByRole('tooltip')).toMatchSnapshot()
    })

    it('should call onChange with the clicked color as argument', async () => {
        const buttonColor = '#123456'
        render(<ColorPicker {...minProps} colors={[buttonColor]} />)
        fireEvent.click(screen.getByRole('button'))
        await screen.findByRole('textbox')
        fireEvent.click(
            screen.getByRole('button', { name: `color ${buttonColor}` }),
        )
        expect(minProps.onChange).toHaveBeenCalledWith(buttonColor)
    })

    it('should propagate event to parent by default', async () => {
        const parentClicked = jest.fn()
        const buttonColor = '#123456'
        render(
            <div onClick={parentClicked}>
                <ColorPicker {...minProps} colors={[buttonColor]} />
            </div>,
        )
        fireEvent.click(screen.getByRole('button'))
        await screen.findByRole('textbox')
        fireEvent.click(
            screen.getByRole('button', { name: `color ${buttonColor}` }),
        )
        expect(parentClicked).toHaveBeenCalled()
    })

    it('should not propagate event to parent when shouldStopPropagation is true', async () => {
        const parentClicked = jest.fn()
        const buttonColor = '#123456'
        render(
            <div onClick={parentClicked}>
                <ColorPicker
                    shouldStopPropagation
                    {...minProps}
                    colors={[buttonColor]}
                />
            </div>,
        )
        fireEvent.click(screen.getByRole('button'))
        await screen.findByRole('textbox')
        fireEvent.click(
            screen.getByRole('button', { name: `color ${buttonColor}` }),
        )
        expect(parentClicked).not.toHaveBeenCalled()
    })
})
