// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColorPicker /> should display popup on button click with default colors, inside container 1`] = `
<div
  id="container"
>
  <div
    class="wrapper"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 button ui-button-fill-a432 ui-button-secondary-a432"
      id="color-picker-4"
      type="button"
    >
      <span
        class="ui-button-content-a432"
      >
        <div
          class="color"
          style="background-color: rgb(255, 255, 255);"
        />
      </span>
    </button>
    <input
      class="input form-control"
      data-testid="color-picker-input"
      placeholder="ex: #eeeeee"
      type="text"
      value="#fff"
    />
  </div>
  <div>
    <div
      class="fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; opacity: 0; pointer-events: none; top: 0px; left: 0px;"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="popover-content popover-body"
          >
            <div
              class="popup"
            >
              <button
                aria-label="color #EB144C"
                class="choice"
                style="background-color: rgb(235, 20, 76);"
                type="button"
              />
              <button
                aria-label="color #FF6900"
                class="choice"
                style="background-color: rgb(255, 105, 0);"
                type="button"
              />
              <button
                aria-label="color #FCB900"
                class="choice"
                style="background-color: rgb(252, 185, 0);"
                type="button"
              />
              <button
                aria-label="color #B5CC18"
                class="choice"
                style="background-color: rgb(181, 204, 24);"
                type="button"
              />
              <button
                aria-label="color #00D084"
                class="choice"
                style="background-color: rgb(0, 208, 132);"
                type="button"
              />
              <button
                aria-label="color #7BDCB5"
                class="choice"
                style="background-color: rgb(123, 220, 181);"
                type="button"
              />
              <button
                aria-label="color #8ED1FC"
                class="choice"
                style="background-color: rgb(142, 209, 252);"
                type="button"
              />
              <button
                aria-label="color #0693E3"
                class="choice"
                style="background-color: rgb(6, 147, 227);"
                type="button"
              />
              <button
                aria-label="color #9900EF"
                class="choice"
                style="background-color: rgb(153, 0, 239);"
                type="button"
              />
              <button
                aria-label="color #E03997"
                class="choice"
                style="background-color: rgb(224, 57, 151);"
                type="button"
              />
              <button
                aria-label="color #F78DA7"
                class="choice"
                style="background-color: rgb(247, 141, 167);"
                type="button"
              />
              <button
                aria-label="color #A5673F"
                class="choice"
                style="background-color: rgb(165, 103, 63);"
                type="button"
              />
              <button
                aria-label="color #ABB8C3"
                class="choice"
                style="background-color: rgb(171, 184, 195);"
                type="button"
              />
              <button
                aria-label="color #767676"
                class="choice"
                style="background-color: rgb(118, 118, 118);"
                type="button"
              />
            </div>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColorPicker /> should display popup on button click with provided colors 1`] = `
[
  <div
    class="popover-inner"
    role="tooltip"
  >
    <div
      class="popover-content popover-body"
    >
      <div
        class="popup"
      >
        <button
          aria-label="color #fff"
          class="choice"
          style="background-color: rgb(255, 255, 255);"
          type="button"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`<ColorPicker /> should render with background color matching defaultValue 1`] = `
<div
  class="wrapper"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 button ui-button-fill-a432 ui-button-secondary-a432"
    id="color-picker-3"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <div
        class="color"
        style="background-color: rgb(0, 0, 0);"
      />
    </span>
  </button>
  <input
    class="input form-control"
    data-testid="color-picker-input"
    placeholder="ex: #eeeeee"
    type="text"
    value=""
  />
</div>
`;

exports[`<ColorPicker /> should render with background color matching value 1`] = `
<div
  class="wrapper"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 button ui-button-fill-a432 ui-button-secondary-a432"
    id="color-picker-2"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      <div
        class="color"
        style="background-color: rgb(255, 255, 255);"
      />
    </span>
  </button>
  <input
    class="input form-control"
    data-testid="color-picker-input"
    placeholder="ex: #eeeeee"
    type="text"
    value="#fff"
  />
</div>
`;

exports[`<ColorPicker /> should render with minimal props 1`] = `
<div
  class="wrapper"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 button ui-button-fill-a432 ui-button-secondary-a432"
    id="color-picker-1"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      Pick a color
    </span>
  </button>
  <input
    class="input form-control"
    data-testid="color-picker-input"
    placeholder="ex: #eeeeee"
    type="text"
    value=""
  />
</div>
`;
